# ncf

./: .gitignore  BLUEPRINT.md  Cargo.toml  Copilot.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_ROADMAP.md  benchmark-output.txt
.github/workflows/: bench.yml  ci.yml  ncf-cli-ci.yml  ncf-convert-ci.yml  ncf-core-ci.yml  ncf-io-ci.yml  ncf-py-ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cbor_header.rs  fuzz_full_open.rs  fuzz_header_parser.rs  fuzz_index_parser.rs
ncf-cli/: Cargo.toml
ncf-cli/src/: main.rs
ncf-convert/: Cargo.toml
ncf-convert/benches/: convert_safetensors.rs
ncf-convert/src/: from_gguf.rs  from_safetensors.rs  lib.rs
ncf-core/: Cargo.toml
ncf-core/benches/: core_benchmark.rs
ncf-core/src/: chunk.rs  header.rs  index.rs  lib.rs  schema.rs
ncf-io/: Cargo.toml
ncf-io/benches/: http_performance.rs  ncf_performance.rs
ncf-io/src/: http_reader.rs  lib.rs  mmap.rs  reader.rs  roundtrip_tests.rs  stream.rs  writer.rs
ncf-io/tests/: integration_roundtrip.rs
ncf-kvcache/: Cargo.toml
ncf-kvcache/src/: error.rs  header.rs  index.rs  lib.rs  reader.rs  writer.rs
ncf-kvcache/tests/: integration.rs
ncf-py/: Cargo.toml
ncf-py/src/: lib.rs
