[package]
name = "ncf-convert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ncf-core = { path = "../ncf-core" }
ncf-io = { path = "../ncf-io" }
safetensors = "0.7"
gguf = "0.1.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
