[package]
name = "ncf-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = { version = "0.2", features = ["std"] }
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bitflags = { version = "2.11", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { workspace = true }
