[package]
name = "ncf-io"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ncf-core = { path = "../ncf-core" }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
ciborium = { version = "0.2", features = ["std"] }
thiserror = "1.0"
self_cell = "1.2.2"
# Compression support for NCF chunk payloads.
zstd = "0.11"
lz4_flex = "0.13"
snap = "1.1"
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util", "fs"], optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.7"
safetensors = "0.7"
tempfile = "3"
wiremock = "0.6"

[[bench]]
name = "ncf_performance"
harness = false
path = "benches/ncf_performance.rs"

[[bench]]
name = "http_performance"
harness = false
path = "benches/http_performance.rs"

[features]
streaming = ["tokio", "futures", "bytes"]
http = ["reqwest", "streaming"]
