[package]
name = "ncf-kvcache"
version = "0.1.0"
edition = "2021"

[dependencies]
ncf-core = { path = "../ncf-core" }
memmap2 = "0.9"
self_cell = "1.2.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = { version = "0.2", features = ["std"] }
crossbeam-channel = "0.5"
bitflags = "2.11"

[dev-dependencies]
tempfile = "3"
